feat&fixBugs: method area & gradle
- jdk7PermanentGenerationSpace
- jdk8Metaspace
- 修复自定义java.lang.String引起的idea编译代码时找不到String有参构造器的bug
- 修复gradle compile时找不到jdk.internal.org.objectweb.asm包的bug